managed/apps/bank/components/website/overlays/dev/patches/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: bank
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/bank/website/dev/static:latest
