managed/apps/bank/components/website/overlays/dev/patches/ingress-website.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: website
  namespace: bank
spec:
  tls:
  - hosts:
    - dev.bank.american-broomstick.com
    secretName: website-tls
  rules:
  - host: dev.bank.american-broomstick.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-static-webserver
              port:
                number: 80
